--- a/frontend/src/app/customer/preview/preview.component.html
+++ b/frontend/src/app/customer/preview/preview.component.html
@@ -54,8 +54,8 @@
   </div>
 
   <div class="bill-section">
-    <button class="btn btn-primary" (click)="goToEditMenu()">Update</button>
-    <button class="btn btn-success" (click)="confirmOrder()">Confirm</button>
+    <button class="btn btn-primary" (click)="goToEditMenu()">Update</button>&nbsp;
+    <button class="btn btn-success" (click)="confirmOrder()">Confirm</button>&nbsp;
     <button class="btn btn-danger" (click)="deleteCancel()">Cancel</button>
   </div>
 </div>
