--- a/frontend/src/app/kitchen/order/order.component.html
+++ b/frontend/src/app/kitchen/order/order.component.html
@@ -38,7 +38,7 @@
       </tr>
     </tbody>
   </table>
-  <button class="btn btn-primary" (click)="goToBack()">Back</button>
+  <button class="btn btn-primary" (click)="goToBack()">Back</button>&nbsp;
   <button class="btn btn-danger" (click)="completeOrder(previewData?.tableID)">Complete</button>
 
 </div>
