--- a/frontend/src/app/customer/preview/preview.component.html
+++ b/frontend/src/app/customer/preview/preview.component.html
@@ -1,3 +1,4 @@
+<div class="background"></div>
 <div class="container bill-container">
   <div class="bill-section">
     <h3>Restaurant Detail</h3>
@@ -54,8 +55,8 @@
   </div>
 
   <div class="bill-section">
-    <button class="btn btn-primary" (click)="goToEditMenu()">Update</button>&nbsp;
-    <button class="btn btn-success" (click)="confirmOrder()">Confirm</button>&nbsp;
-    <button class="btn btn-danger" (click)="deleteCancel()">Cancel</button>
+    <button class="btn btn-primary mb-3" (click)="goToEditMenu()">Update</button>&nbsp;
+    <button class="btn btn-success mb-3" (click)="confirmOrder()">Confirm</button>&nbsp;
+    <button class="btn btn-danger mb-3" (click)="deleteCancel()">Cancel</button>
   </div>
 </div>
