--- a/frontend/src/app/customer/preview/preview.component.css
+++ b/frontend/src/app/customer/preview/preview.component.css
@@ -1,6 +1,9 @@
 .bill-container {
   padding: 20px;
   background-color: #f5f5f5;
+  height: 700px; /* Set a fixed height */
+  overflow-y: auto; /* Enable vertical scrolling*/
+  
 }
 
 .bill-section {
@@ -39,4 +42,17 @@
 .btn-danger:hover {
   background-color: #0056b3;
   border-color: #0056b3;
+}
+.background{
+  background-image: url("../../../assets/WelcomePage.jpg");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.4;
 }
