--- a/frontend/src/app/customer/thank-you/thank-you.component.html
+++ b/frontend/src/app/customer/thank-you/thank-you.component.html
@@ -1,3 +1,4 @@
+<div class="background"></div>
 <div class="container">
   <div class="thank-you-message text-center">
     <p>Thank You {{customerName}} For Your Order</p>
