--- a/frontend/src/app/kitchen/menu/menu.component.css
+++ b/frontend/src/app/kitchen/menu/menu.component.css
@@ -1,8 +1,9 @@
 .container {
-  max-width: 800px;
+  max-width: 1000px;
 }
-.background{
-  background-image: url(../../../assets/menuBackground.jpg);
+
+.background {
+  background-image: url(../../../assets/WelcomePage.jpg);
   background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: center;
@@ -12,15 +13,23 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: 0.1;
+  opacity: 0.4;
 }
+
+.headingButton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+
 .menu-form {
-  width: 30%;
+  width: 40%;
   border: 1px solid #ddd;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 0 auto;
+  /* margin: 0 auto; */
 }
 
 .table {
@@ -58,7 +67,38 @@ h1 {
 }
 
 .table {
+  font-weight: bolder;
   margin-top: 20px;
+}
+
+.large-btn {
+  font-size: 1.5rem;
+  padding: 10px 20px;
+  height: fit-content;
+  width: fit-content;
+  background-color: #565C64;
+  color: #FFD98E;
+  box-shadow: 0 0 10px #FFD98E;
+  border: 1px solid yellow;
+  margin-top: 3%;
+  border-radius: 20px;
+}
+
+.headingText {
+  font-size: 3.5vw;
+  font-family: 'Lugrasimo', sans-serif;
+  text-shadow: 2px 2px 10px #565C64;
+  color: #FFD98E;
+  margin-bottom: 5%;
+  text-align: center;
+  line-height: 1.2;
+}
+
+.large-btn:hover {
+  background-color: #FFD98E;
+  color: #565C64;
+  box-shadow: 0 0 10px #565C64;
+  border: 1px solid #565C64;
 }
 
 .btn-primary {
@@ -75,6 +115,9 @@ h1 {
   border-color: #bd2130;
 }
 
-table,th,tr,td{
+table,
+th,
+tr,
+td {
   background-color: transparent;
 }
