--- a/frontend/src/app/kitchen/order/order.component.html
+++ b/frontend/src/app/kitchen/order/order.component.html
@@ -1,6 +1,7 @@
+<div class="background"></div>
 <div class="container">
-  <h2>Order Details - Table No: {{ previewData?.tableID }}</h2>
-  <div class="row detailAndStatus">
+  <h2 class="mt-4">Order Details - Table No: {{ previewData?.tableID }}</h2>
+  <div class="row detailAndStatus mt-3">
 
     <div class="col-md-8 customerDetail">
       <p><strong>Name:</strong> {{ previewData?.name }}</p>
@@ -23,12 +24,11 @@
   <hr class="my-4">
 
   <h3>Order Detail</h3>
-  <table class="table table-striped">
+  <table class="table table-striped tableCustom">
     <thead class="thead-dark">
       <tr>
         <th>Food Name</th>
         <th>Quantity</th>
-
       </tr>
     </thead>
     <tbody>
@@ -38,7 +38,8 @@
       </tr>
     </tbody>
   </table>
-  <button class="btn btn-primary" (click)="goToBack()">Back</button>&nbsp;
-  <button class="btn btn-danger" (click)="completeOrder(previewData?.tableID)">Complete</button>
-
+  <div class="mt-4">
+    <button class="btn btn-primary mr-2" (click)="goToBack()">Back</button>&nbsp;
+    <button class="btn btn-danger" (click)="completeOrder(previewData?.tableID)">Complete</button>
+  </div>
 </div>
