--- a/frontend/src/app/kitchen/menu/menu.component.css
+++ b/frontend/src/app/kitchen/menu/menu.component.css
@@ -15,10 +15,14 @@
   z-index: -1;
   opacity: 0.4;
 }
-
+.ctrlButton{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
 .headingButton {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
 
 }
