--- a/frontend/src/app/kitchen/menu/menu.component.html
+++ b/frontend/src/app/kitchen/menu/menu.component.html
@@ -2,60 +2,98 @@
 <div class="container">
   <div class="headingButton">
     <h1 class="text-center mt-5 headingText">Menu Management Panel</h1>
-    <button type="submit" class="large-btn mt-3" (click)="openModal(modal);addItem()">Add Item</button>&nbsp;
-    <button type="submit" class="large-btn mt-3" (click)="goToDashboard()">Go to Dashboard</button>
 
+    <div class="ctrlButton">
+      <button
+        type="submit"
+        class="btn btn-primary mt-3"
+        (click)="openModal(modal); addItem()"
+      >
+        Add Item</button
+      >&nbsp;
+      <button
+        type="submit"
+        class="btn btn-primary mt-3"
+        (click)="goToDashboard()"
+      >
+        Go to Dashboard
+      </button>
+    </div>
   </div>
 
-    <ng-template #modal let-modal>
-
+  <ng-template #modal let-modal>
     <div class="modal-header">
-      <h3 class="headingText modal-title" id="modal-basic-title">{{updateOrAddNew}}</h3>
-      <button type="button" class="large-btn close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <h3 class="headingText modal-title" id="modal-basic-title">
+        {{ updateOrAddNew }}
+      </h3>
+      <button
+        type="button"
+        class="large-btn close"
+        aria-label="Close"
+        (click)="modal.dismiss('Cross click')"
+      >
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
 
     <div class="modal-body">
-
       <div class="d-flex justify-content-center mt-2">
         <form [formGroup]="form" class="menu-form">
           <div class="form-group">
             <label for="name">Name:</label>
-            <input type="text" id="name" formControlName="name" class="form-control" />
+            <input
+              type="text"
+              id="name"
+              formControlName="name"
+              class="form-control"
+            />
           </div>
 
           <div class="form-group">
             <label for="price">Price:</label>
-            <input type="text" id="price" formControlName="price" class="form-control" />
+            <input
+              type="text"
+              id="price"
+              formControlName="price"
+              class="form-control"
+            />
           </div>
-
 
           <div class="form-group">
             <label for="category">Category:</label>
-            <input type="text" id="category" formControlName="category" class="form-control" />
+            <input
+              type="text"
+              id="category"
+              formControlName="category"
+              class="form-control"
+            />
           </div>
 
           <div class="form-group">
             <div class="form-check">
-              <input type="checkbox" id="available" formControlName="available" class="form-check-input" />
+              <input
+                type="checkbox"
+                id="available"
+                formControlName="available"
+                class="form-check-input"
+              />
               <label class="form-check-label" for="available">Available</label>
             </div>
           </div>
 
-          <button type="submit" class="large-btn btn-primary" (click)="onSubmit();modal.close()">{{updateOrAddNew}}</button>
+          <button
+            type="submit"
+            class="large-btn btn-primary"
+            (click)="onSubmit(); modal.close()"
+          >
+            {{ updateOrAddNew }}
+          </button>
         </form>
       </div>
-
     </div>
-
-
   </ng-template>
 
-
-
-
-  <hr class="my-4">
+  <hr class="my-4" />
 
   <table class="table table-striped">
     <thead class="thead-dark">
@@ -74,11 +112,20 @@
         <td>{{ menu.category }}</td>
         <td>{{ menu.available }}</td>
         <td>
-          <button class="btn btn-sm btn-info mr-2" (click)="updateMenu(menu);openModal(modal)">Update</button>
-          &nbsp;<button class="btn btn-sm btn-danger" (click)="deleteFoodItem(menu._id)">Delete</button>
+          <button
+            class="btn btn-sm btn-info mr-2"
+            (click)="updateMenu(menu); openModal(modal)"
+          >
+            Update
+          </button>
+          &nbsp;<button
+            class="btn btn-sm btn-danger"
+            (click)="deleteFoodItem(menu._id)"
+          >
+            Delete
+          </button>
         </td>
       </tr>
     </tbody>
   </table>
-
 </div>
