--- a/frontend/src/app/customer/menu/menu.component.html
+++ b/frontend/src/app/customer/menu/menu.component.html
@@ -2,12 +2,15 @@
 <div class="container mainContainer">
   <h2 class="text-center menuText">Menu</h2>
 
-
-
   <div class="tableButtonContainer">
     <div *ngFor="let category of categories; let i = index">
       <div class="categoryContainer">
-        <div class="categoryBackground" [style.background-image]="'url(../../../assets/foodImage' + (i+1) + '.jpg)'">
+        <div
+          class="categoryBackground"
+          [style.background-image]="
+            'url(../../../assets/foodImage' + (i + 1) + '.jpg)'
+          "
+        >
           <h2 class="text-center menuText">{{ category.name }}</h2>
           <table class="table table-striped">
             <thead>
@@ -24,26 +27,56 @@
                 <td class="categoryText">
                   <div class="input-group">
                     <div class="input-group-prepend">
-                      <button class="btn btn-outline-secondary buttonMinus"
-                        (click)="decreaseQuantity(item);selectedItem()" [disabled]="!item.available"><svg
-                          class="svgMinus" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                          class="bi bi-dash-square" viewBox="0 0 16 16">
+                      <button
+                        class="btn btn-outline-secondary buttonMinus"
+                        (click)="decreaseQuantity(item); selectedItem()"
+                        [disabled]="!item.available"
+                      >
+                        <svg
+                          class="svgMinus"
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="20"
+                          height="20"
+                          fill="currentColor"
+                          class="bi bi-dash-square"
+                          viewBox="0 0 16 16"
+                        >
                           <path
-                            d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
-                          <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z" />
-                        </svg></button>
+                            d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"
+                          />
+                          <path
+                            d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"
+                          />
+                        </svg>
+                      </button>
                     </div>
-                    <input type="text" class="form-control input-sm" [value]="item.quantity ? item.quantity : 0"
-                      [disabled]="!item.available">
+                    <input
+                      type="text"
+                      class="form-control input-sm"
+                      [value]="item.quantity ? item.quantity : 0"
+                      [disabled]="!item.available"
+                    />
                     <div class="input-group-append">
-                      <button class="btn btn-outline-secondary buttonPlus"
-                        (click)="increaseQuantity(item);selectedItem() " [disabled]="!item.available">
-                        <svg class="svgPlus" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                          fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+                      <button
+                        class="btn btn-outline-secondary buttonPlus"
+                        (click)="increaseQuantity(item); selectedItem()"
+                        [disabled]="!item.available"
+                      >
+                        <svg
+                          class="svgPlus"
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="20"
+                          height="20"
+                          fill="currentColor"
+                          class="bi bi-plus-square"
+                          viewBox="0 0 16 16"
+                        >
                           <path
-                            d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                            d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"
+                          />
                           <path
-                            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+                            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"
+                          />
                         </svg>
                       </button>
                     </div>
@@ -57,15 +90,24 @@
     </div>
 
     <div>
-      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
-        aria-labelledby="offcanvasExampleLabel">
+      <div
+        class="offcanvas offcanvas-start"
+        tabindex="-1"
+        id="offcanvasExample"
+        aria-labelledby="offcanvasExampleLabel"
+      >
         <div class="orderSummaryContainer">
           <div class="offcanvas-header">
-            <div *ngIf="orderSummary.length==0">
+            <div *ngIf="orderSummary.length == 0">
               <h2>No Order Selected</h2>
             </div>
-            <h2 *ngIf="orderSummary.length>0">Order Summary</h2>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <h2 *ngIf="orderSummary.length > 0">Order Summary</h2>
+            <button
+              type="button"
+              class="btn-close text-reset"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="offcanvas-body">
             <table class="table">
@@ -88,19 +130,24 @@
             </table>
           </div>
           <div class="offcanvas-footer">
-            <button class="btn btn-primary mt-2 p-3" (click)="submitOrder()">Submit Order</button>&nbsp;          </div>
+            <button class="btn btn-primary mt-2 p-3" (click)="submitOrder()">
+              Submit Order</button
+            >&nbsp;
+          </div>
         </div>
       </div>
-
-
     </div>
   </div>
-
 </div>
 
 <div class="orderSummaryButton">
-  <button class="btn btn-primary mt-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
-    aria-controls="offcanvasExample">
+  <button
+    class="btn btn-primary mt-2"
+    type="button"
+    data-bs-toggle="offcanvas"
+    data-bs-target="#offcanvasExample"
+    aria-controls="offcanvasExample"
+  >
     Order Summary
   </button>
 </div>
