--- a/frontend/src/app/customer/thank-you/thank-you.component.css
+++ b/frontend/src/app/customer/thank-you/thank-you.component.css
@@ -6,7 +6,8 @@
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
-.background{
+
+.background {
   background-image: url("../../../assets/WelcomePage.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -19,7 +20,8 @@
   z-index: -1;
   opacity: 0.4;
 }
+
 .thank-you-message p {
   font-size: 20px;
   margin-bottom: 10px;
-}
+}/*# sourceMappingURL=thank-you.component.css.map */
