--- a/frontend/src/app/customer/thank-you/thank-you.component.scss
+++ b/frontend/src/app/customer/thank-you/thank-you.component.scss
@@ -1,3 +1,11 @@
+@import "../../../../styling/mixins";
+@include thankYouPage;
+
+
+
+
+
+
 // $m-top:50px;
 // $m-bottom:10px;
 // .thank-you-message {
@@ -25,35 +33,35 @@
 //   font-size: 20px;
 //   margin-bottom: $m-bottom;
 // }
-$primary-color: transparent;
-$shadow-color: rgba(0, 0, 0, 0.2);
-$background-image: url("../../../assets/WelcomePage.jpg");
+// $primary-color: transparent;
+// $shadow-color: rgba(0, 0, 0, 0.2);
+// $background-image: url("../../../assets/WelcomePage.jpg");
 
-.background {
-  background-image: $background-image;
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  background-position: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  opacity: 0.4;
-}
+// .background {
+//   background-image: $background-image;
+//   background-size: 100% auto;
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   z-index: -1;
+//   opacity: 0.4;
+// }
 
-.thank-you-message {
-  margin-top: 50px;
-  padding: 20px;
-  background-color: $primary-color;
-  opacity: 0.9;
-  border-radius: 5px;
-  box-shadow: 0 0 10px $shadow-color;
-  text-align: center;
+// .thank-you-message {
+//   margin-top: 50px;
+//   padding: 20px;
+//   background-color: $primary-color;
+//   opacity: 0.9;
+//   border-radius: 5px;
+//   box-shadow: 0 0 10px $shadow-color;
+//   text-align: center;
 
-  p {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-}
+//   p {
+//     font-size: 20px;
+//     margin-bottom: 10px;
+//   }
+// }
